--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
          <img src="https://raw.githubusercontent.com/7VALHALLA7/PRE-CROW-S-NEST/main/upscalemedia-transformed.png" width="450" style="display: block; position: relative; z-index: 2; margin: 0 auto;" alt=" nada">
     </div>
     <h1>GELATINA ME CAES MAL</h1>
+    <h1>ERES UNA NIÑA RATA ADICTA AL FREE FIRE</h1></h1>
 </body>
 </html>
