--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8" />
     <title>CROWNEST</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div style="position: relative; width: 450px; margin: 0 auto;">
+    <header>
+        <div class="container">
          <img src="https://raw.githubusercontent.com/7VALHALLA7/PRE-CROW-S-NEST/main/upscalemedia-transformed.png" width="450" style="display: block; position: relative; z-index: 2; margin: 0 auto;" alt=" nada">
+         <nav>
+            <a href="#"> REGISTRARSE </a>
+            <A href="#"> INICIAR SESIÓN </A>
+            <A href="#"> CONTACTO</A>
+         </nav>   
+        </div>      
+    </header>
+    <div class="container">
+        <p> CURSOS </p>
+        
     </div>
-    <h1>GELATINA ME CAES MAL</h1>
-    <h1>ERES UNA NIÑA RATA ADICTA AL FREE FIRE</h1></h1>
 </body>
 </html>
