--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <header>
         <div class="container">
-         <img src="https://raw.githubusercontent.com/7VALHALLA7/PRE-CROW-S-NEST/main/upscalemedia-transformed.png" width="450" style="display: block; position: relative; z-index: 2; margin: 0 auto;" alt=" nada">
+         <img src="https://raw.githubusercontent.com/7VALHALLA7/PRE-CROW-S-NEST/main/upscalemedia-transformed.png" 
+         width="450" 
+         style="display: block; position: relative; z-index: 2; margin: 0 auto;" alt=" nada">
          <nav>
             <a href="#"> REGISTRARSE </a>
             <A href="#"> INICIAR SESIÓN </A>
@@ -18,7 +20,20 @@
     </header>
     <div class="container">
         <p> CURSOS </p>
-        
-    </div>
+        <img src="https://raw.githubusercontent.com/7VALHALLA7/PRE-CROW-S-NEST/main/ESPE.png" 
+        width="350" height="400"
+         alt=" nada">
+         <img src="https://raw.githubusercontent.com/7VALHALLA7/PRE-CROW-S-NEST/main/logo-epn-vertical.png" 
+        width="350" height="400"
+         alt=" nada">
+         <img src="https://raw.githubusercontent.com/7VALHALLA7/PRE-CROW-S-NEST/main/uce.png" 
+        width="350" height="400"
+         alt=" nada">
+         </div>
+    <footer>
+        <div class="container">
+            <p>&copy; CROW'S NEST 2025</p>
+        </div>
+    </footer>
 </body>
 </html>
